# 42-Chess

./: .gitignore  Makefile  board.config  demo_checkmate.py  demo_game.py  ftchess-0.0.1-py3-none-any.whl  ftchess-0.0.2-py3-none-any.whl  ftchess-0.0.3-py3-none-any.whl  ftchess-0.0.4-py3-none-any.whl  ftchess-0.0.5-py3-none-any.whl  manual_game.py  pyproject.toml
ftchess/: __init__.py
ftchess/board/: board.py
ftchess/pawns/: __init__.py  abstract_pawn.py  king.py  queen.py  rook.py
ftchess/player/: player.py
src/board/: __init__.py  board.py
src/pawns/: __init__.py  abstract_pawn.py  bishop.py  king.py  knight.py  pawn.py  queen.py  rook.py
src/player/: __init__.py  player.py
